--- a/FindKids/app/src/main/res/layout/main_activity.xml
+++ b/FindKids/app/src/main/res/layout/main_activity.xml
@@ -35,8 +35,9 @@
     </LinearLayout>
     <FrameLayout
         android:id="@+id/fragment_container"
+        android:layout_above="@+id/tab_menu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#00000000">
     </FrameLayout>
 
