--- a/FindKids/app/src/main/res/layout/map_fragment.xml
+++ b/FindKids/app/src/main/res/layout/map_fragment.xml
@@ -4,14 +4,9 @@
     android:layout_height="match_parent"
     android:background="#00000000">
 
-
-    <TextView
-        android:id="@+id/map_content"
+    <com.amap.api.maps2d.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="呵呵"
-        android:textColor="@color/colorWrite"
-        android:textSize="20sp"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
